syntax = "proto3";

package greet.v1;

option go_package = ".;proto";

service Greeter {
  // Unary RPC
  rpc SayHello (HelloRequest) returns (HelloResponse);
  // Server streaming RPC
  rpc LotsOfReplies(HelloRequest) returns (stream HelloResponse);
  // Client streaming RPC
  rpc LotsOfGreetings(stream HelloRequest) returns (HelloResponse);
  // Bi-directional streaming RPC
  rpc BidiHello(stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}
